# odoo-instance-sdk

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  ruff.toml
.githooks/: commit-msg
.github/workflows/: ci.yml
docs/adr/: 0001-version-independent-of-odoo.md
examples/: .env.example  backup_and_restore.py  fastapi_integration.py  prepare_dev_instance.py
openspec/changes/add-database-restore-tracking/: README.md  proposal.md  tasks.md
openspec/changes/add-instance-backup-catalog/: design.md
openspec/changes/bootstrap-core-sdk/: design.md  proposal.md  tasks.md
openspec/specs/backup-catalog/: spec.md
openspec/specs/client-config/: spec.md
openspec/specs/database-backup/: spec.md
openspec/specs/database-management/: spec.md
openspec/specs/database-restore/: spec.md
openspec/specs/database-restore-tracking/: spec.md
openspec/specs/models-types/: spec.md
openspec/specs/packaging/: spec.md
src/odoo_instance_sdk/: __init__.py  __main__.py  _health.py  _local_guard.py  _platform_cache.py  client.py  config.py  database.py  exceptions.py  models.py  server.py
tests/: _helpers.py  test_config_repr.py  test_database_backup.py  test_database_management.py  test_database_restore.py  test_local_guard.py  test_readiness.py  test_server_cli.py  test_server_lifecycle.py
tests/fixtures/: __init__.py  odoo_database_server.py
tests/integration/: conftest.py  test_backup_download.py  test_database_lifecycle.py
tests/unit/: test_client.py  test_config_repr.py
(+53 files in other folders)
