[project]
name = "odoo-instance-sdk"
version = "0.1.0"
description = "A typed Python SDK for managing local Odoo 19.0 instances: process lifecycle, CLI commands, readiness checks, and database operations via standard HTTP API."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
authors = [
    { name = "maximchikAlexandr", email = "maximchik.alexandr@yandex.ru" },
]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "httpx>=0.27,<1.0",
    "msgspec>=0.18,<1.0",
    "platformdirs>=4.3,<5",
]

[project.urls]
Source = "https://github.com/maximchikAlexandr/odoo-instance-sdk"

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.0",
    "ruff>=0.15",
    "pytest>=8.0",
    "pytest-httpx>=0.30,<1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
strict = true
